@@ -116,7 +116,7 @@ NSS_STATUS _nss_ldap_dn2uid (LDAP * ld,
  * ** implemented
  */
 
-void _nss_ldap_init_config (ldap_config_t *);
+NSS_STATUS _nss_ldap_init_config (ldap_config_t *);
 
 NSS_STATUS _nss_ldap_readconfig (ldap_config_t ** result,
 				 char *buf, size_t buflen);
